<resources>
    <string name="app_name">TaskIt</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_puntuacion">Score</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="score">Score</string>
    <string name="create">Create</string>
    <string name="points">Points</string>
    <string name="tasks">Tasks</string>
    <string name="register">Register</string>
    <string name="log_out_warning">Do you want to log out?</string>
    <string name="log_out">Log out</string>
    <string name="ejemplo_titulo">Ex. \'Cook\'</string>
    <string name="ejemplo_puntuacion">0-99</string>
</resources>