<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context="com.example.taskit.ui.crear.CrearFragment">

    <ScrollView
        android:layout_width="359dp"
        android:layout_height="303dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/dummy_bg"
        android:elevation="8dp"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/editTextTextTaskName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/ejemplo_titulo"
                android:inputType="textPersonName"
                android:maxLength="12" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/editTextTextDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:maxLength="40" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/score"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/editTextTextScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/ejemplo_puntuacion"
                android:inputType="number"
                android:maxLength="2" />

            <Button
                android:id="@+id/button_createTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="216dp"
        android:layout_height="64dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="101dp"
        android:layout_marginRight="101dp"
        android:fontFamily="@font/baloo_thambi"
        android:gravity="center"
        android:text="@string/tasks"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>